[gd_scene load_steps=13 format=3 uid="uid://dylhh7bjekia6"]

[ext_resource type="Script" path="res://Character_Brain.gd" id="1_50our"]
[ext_resource type="Texture2D" uid="uid://bcsyp41dnibic" path="res://Mage.png" id="2_da2a1"]
[ext_resource type="Script" path="res://Rock.gd" id="3_em4n0"]
[ext_resource type="Texture2D" uid="uid://0pobw4eyjllw" path="res://Assets_And_Placeholders/RockProto1616.png" id="4_2ikfh"]
[ext_resource type="Script" path="res://Up.gd" id="4_on3xx"]
[ext_resource type="Script" path="res://Right.gd" id="4_uchjw"]
[ext_resource type="Script" path="res://Left.gd" id="5_13mov"]
[ext_resource type="Script" path="res://Down.gd" id="7_f4qa6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ln63"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6mh6"]
size = Vector2(14, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_wbf7d"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6pvhw"]

[node name="Player_and_Rock" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 15
collision_layer = 48
script = ExtResource("1_50our")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_8ln63")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
z_index = 15
position = Vector2(1, -4)
scale = Vector2(1.125, 1.04167)
texture = ExtResource("2_da2a1")

[node name="Hurt_Detector" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Hurt_Detector"]
shape = SubResource("RectangleShape2D_o6mh6")

[node name="Rock_Detector" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Rock_Detector"]
shape = SubResource("RectangleShape2D_o6mh6")

[node name="Snap_Points" type="Node2D" parent="Player"]

[node name="Up" type="Sprite2D" parent="Player/Snap_Points"]
position = Vector2(0, -25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_2ikfh")
script = ExtResource("4_on3xx")

[node name="Left" type="Sprite2D" parent="Player/Snap_Points"]
position = Vector2(0, -25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_2ikfh")
script = ExtResource("5_13mov")

[node name="Right" type="Sprite2D" parent="Player/Snap_Points"]
position = Vector2(0, -25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_2ikfh")
script = ExtResource("4_uchjw")

[node name="Down" type="Sprite2D" parent="Player/Snap_Points"]
position = Vector2(0, -25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_2ikfh")
script = ExtResource("7_f4qa6")

[node name="Rock" type="CharacterBody2D" parent="." node_paths=PackedStringArray("snap_point")]
position = Vector2(42, -31)
collision_layer = 161
collision_mask = 17
script = ExtResource("3_em4n0")
snap_point = NodePath("../Player/Snap_Points/Up")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock"]
shape = SubResource("CircleShape2D_wbf7d")

[node name="Sprite2D" type="Sprite2D" parent="Rock"]
z_index = 15
scale = Vector2(0.6875, 0.6875)
texture = ExtResource("4_2ikfh")

[node name="Area2D" type="Area2D" parent="Rock"]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Rock/Area2D"]
shape = SubResource("CircleShape2D_6pvhw")

[connection signal="equip" from="Player" to="Rock" method="_on_player_equip"]
[connection signal="unequip" from="Player" to="Rock" method="_on_player_unequip"]
[connection signal="area_entered" from="Player/Hurt_Detector" to="Player" method="_on_hurt_detected"]
[connection signal="body_entered" from="Player/Hurt_Detector" to="Player" method="_on_hurt_detected"]
[connection signal="area_entered" from="Player/Rock_Detector" to="Player" method="rock_detected"]
[connection signal="area_exited" from="Player/Rock_Detector" to="Player" method="rock_exited"]
[connection signal="body_entered" from="Player/Rock_Detector" to="Player" method="rock_detected"]
[connection signal="body_exited" from="Player/Rock_Detector" to="Player" method="rock_exited"]
[connection signal="rock_resized" from="Rock" to="Player/Snap_Points/Up" method="_on_rock_rock_resized"]
[connection signal="rock_resized" from="Rock" to="Player/Snap_Points/Left" method="_on_rock_rock_resized"]
[connection signal="rock_resized" from="Rock" to="Player/Snap_Points/Right" method="_on_rock_rock_resized"]
[connection signal="rock_resized" from="Rock" to="Player/Snap_Points/Down" method="_on_rock_rock_resized"]
